--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
+    "@types/react-bootstrap": "^0.32.35",
     "@vercel/postgres": "^0.5.0",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
@@ -19,6 +20,7 @@
     "next": "^14.0.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
